docs: Add PR #16 link to Story 4.1

--- a/docs/stories/4.1.application-form-handler-base.md
+++ b/docs/stories/4.1.application-form-handler-base.md
@@ -209,7 +209,14 @@ Implement the base Application Form Handler agent that detects the submission me
 ### Next Steps
 
 - ✅ Story approved by SM
-- ⏸️ PR created (feature/story-4-1 → main)
+- ✅ PR created: #16 (feature/story-4-1 → main)
 - ⏸️ Code Reviewer PR review
 - ⏸️ Merge to main
 - ⏸️ Story retrospective
+
+### Pull Request
+
+- **PR #16:** https://github.com/linus-mcmanamey/need_a_job/pull/16
+- **Title:** Story 4.1: Application Form Handler Agent Base
+- **Status:** Open
+- **Created:** 2025-10-29
